--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ cmake_install.cmake
 install_manifest.txt
 CTestTestfile.cmake
 Testing/
+build/
 
 # Executables and libraries (platform-specific)
 *.exe
